--- a/src/styles/components/common.sass
+++ b/src/styles/components/common.sass
@@ -19,6 +19,8 @@ main
 	overflow: hidden
 	.is-sub &
 		padding-top: 120px
+		+sm
+			padding-top: 52px
 	&[data-page='contacts']
 		position: relative
 		z-index: 2
