--- a/src/styles/components/preloader.sass
+++ b/src/styles/components/preloader.sass
@@ -27,6 +27,9 @@
 		clip-path: ellipse(85% 100% at 25% -100%)
 		+md
 			clip-path: none
+		.is-sub &
+			+md
+				clip-path: ellipse(85% 100% at 25% -100%)
 		&:before
 			content: ''
 			+ratio-in
