--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -134,6 +134,11 @@ html(lang='ru')
 				'02',
 				'Contacts',
 				'Contacts page'
+			], [
+				'blog.html',
+				'02',
+				'Blog',
+				'Blog page'
 			]
 		];
 	header.
