--- a/src/styles/components/footer.sass
+++ b/src/styles/components/footer.sass
@@ -303,10 +303,9 @@
 				visibility: hidden
 				display: flex
 				align-items: center
-				justify-content: flex-start
+				justify-content: center
 				+h3
-				.container
-					width: 100%
+				text-align: center
 			
 		&-title
 			+h2
