--- a/src/styles/partials/_fonts.sass
+++ b/src/styles/partials/_fonts.sass
@@ -1,4 +1,5 @@
 +font('MullerRegular', 'MullerRegular')
 +font('MullerMedium', 'MullerMedium')
++font('MullerBold', 'MullerBold')
 +font('Gilroy-Bold', 'Gilroy-Bold')
 +font('Gilroy-ExtraBold', 'Gilroy-ExtraBold')
