--- a/src/styles/pages/blog.sass
+++ b/src/styles/pages/blog.sass
@@ -1,13 +1,14 @@
 .blog
-	.card__title
-		line-height: 28px
+	padding-bottom: 60px
+	+sm
+		padding-bottom: 30px
 	
 	&__title
 		+h2
 		
 	&__list
 		display: flex
-		margin: 55px -25px 0
+		margin: 54px -25px 0
 		flex-wrap: wrap
 		+sm
 			display: block
@@ -16,11 +17,15 @@
 			display: flex
 			flex: 1 1 0
 			padding: 0 25px
+			margin-bottom: 22px
 			+sm
 				padding: 0
 			&:first-child
 				flex-basis: 100%
 				width: 100%
-			//&:nth-child(2) ~ &
-				+only-tab
-					display: none
+				
+	&__btn-wrap
+		margin-top: 32px
+		text-align: center
+		+sm
+			margin-top: 28px
