--- a/src/styles/partials/_fonts.sass
+++ b/src/styles/partials/_fonts.sass
@@ -1,4 +1,5 @@
 +font('MullerRegular', 'MullerRegular')
++font('MullerRegularItalic', 'MullerRegularItalic')
 +font('MullerMedium', 'MullerMedium')
 +font('MullerBold', 'MullerBold')
 +font('Gilroy-Bold', 'Gilroy-Bold')
