--- a/src/template/pages/blog.pug
+++ b/src/template/pages/blog.pug
@@ -2,6 +2,7 @@ extends ../extend/default
 
 block variables
 	- var title = 'Blog page';
+	-footerSub = true
 
 block main
 	main.content(data-page='blog')
