--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -131,14 +131,19 @@ html(lang='ru')
 				'404 page'
 			], [
 				'contacts.html',
-				'02',
+				'03',
 				'Contacts',
 				'Contacts page'
 			], [
 				'blog.html',
-				'02',
+				'04',
 				'Blog',
 				'Blog page'
+			], [
+				'article.html',
+				'05',
+				'Article',
+				'Article page'
 			]
 		];
 	header.
