--- a/src/styles/partials/_mixins.sass
+++ b/src/styles/partials/_mixins.sass
@@ -184,3 +184,57 @@ $browser-context: 16
 		height: 0
 		visibility: hidden
 		overflow: hidden
+		
+
+/* ===================================
+	 LIST
+	 =================================== */
+=ul-list
+	ul
+		max-width: 700px
+		padding-left: 23px
+		li
+			position: relative
+			&:not(:first-child)
+				margin-top: 16px
+			&:before
+				content: ''
+				position: absolute
+				left: -22px
+				top: 18px
+				width: 4px
+				height: 4px
+				border-radius: 50%
+				background-color: $color4
+				+md
+					top: 15px
+				+sm
+					top: 11px
+				
+=ol-list
+	ol
+		position: relative
+		max-width: 7000px
+		padding-left: 38px
+		counter-reset: list
+		li
+			position: relative
+			&:before
+				position: absolute
+				top: 1px
+				left: -38px
+				counter-increment: list
+				content: counter(list)
+				+f('Gilroy-ExtraBold',20,32,0)
+				color: $color4
+			&:after
+				content: ''
+				position: absolute
+				left: -13px
+				top: 20px
+				width: 4px
+				height: 4px
+				background-color: $color4
+				border-radius: 50%
+			&:not(:first-child)
+				margin-top: 16px
