PROD (title fix)

--- a/src/styles/pages/home/chat.sass
+++ b/src/styles/pages/home/chat.sass
@@ -230,6 +230,12 @@
 					margin-top: 30px
 					+sm
 						margin-top: 20px
+				a
+					+trs
+					color: $color4
+					text-decoration: underline
+					.no-touch &:hover
+						color: $color2
 				&-inner
 					display: flex
 				&:before
