--- a/src/styles/pages/blog.sass
+++ b/src/styles/pages/blog.sass
@@ -19,11 +19,14 @@
 			flex: 1 1 0
 			padding: 0 25px
 			margin-bottom: 22px
+			max-width: 33.333%
 			+sm
 				padding: 0
+				max-width: none
 			&:first-child
 				flex-basis: 100%
 				width: 100%
+				max-width: none
 				
 	&__btn-wrap
 		margin-top: 32px
