--- a/src/styles/pages/blog.sass
+++ b/src/styles/pages/blog.sass
@@ -20,6 +20,8 @@
 			padding: 0 25px
 			margin-bottom: 22px
 			max-width: 33.333%
+			+md
+				max-width: 50%
 			+sm
 				padding: 0
 				max-width: none
