PROD (article update)

--- a/src/styles/pages/article.sass
+++ b/src/styles/pages/article.sass
@@ -62,3 +62,79 @@
 	padding-bottom: 38px
 	+sm
 		padding-top: 42px
+	
+	&__share
+		margin-top: 40px
+		text-align: center
+		&-in
+			display: inline-flex
+			justify-content: center
+			align-items: center
+			padding: 0 40px
+			height: 72px
+			border-radius: 36px
+			overflow: hidden
+			background-image: linear-gradient(to left, #1e14a8 0%, $color4 100%)
+			+sm
+				height: 57px
+				padding: 0 20px
+		&-text
+			+f('Gilroy-Bold',20,32,0)
+			color: $color6
+			white-space: nowrap
+			+sm
+				font-size: 16px
+				line-height: 24px
+		&-soc
+			position: relative
+			font-size: 26px
+			margin-left: 22px
+			color: #231EB1
+			display: flex
+			+sm
+				margin-left: 12px
+			.icon
+				display: block
+			&-icon-wrap
+				position: relative
+				&:not(:first-child)
+					margin-left: 15px
+					+sm
+						margin-left: 5px
+				&:before,
+				&:after
+					pointer-events: none
+					content: ''
+					position: absolute
+					top: calc(100% + 5px)
+					left: calc(50% - 2px)
+					width: 4px
+					height: 4px
+					border-radius: 50%
+					background-color: $color8
+					opacity: 0
+					+trs
+				.no-touch &:hover
+					&:before
+						opacity: 1
+						left: calc(50% - 12px)
+					&:after
+						opacity: 1
+						left: calc(50% + 8px)
+			&-icon
+				&:before
+					pointer-events: none
+					content: ''
+					position: absolute
+					top: calc(100% + 5px)
+					left: calc(50% - 2px)
+					width: 4px
+					height: 4px
+					border-radius: 50%
+					background-color: $color8
+					opacity: 0
+					+trs
+				.no-touch &:hover
+					&:before
+						opacity: 1
+		
