--- a/src/styles/partials/_svg.scss
+++ b/src/styles/partials/_svg.scss
@@ -136,6 +136,12 @@
   fill: currentColor;
   stroke: initial;
 }
+.icon-twitter {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
 .icon-viber {
   width: 1em;
   height: 1em;
