--- a/src/styles/partials/_helpers.sass
+++ b/src/styles/partials/_helpers.sass
@@ -270,9 +270,11 @@ h4
 			+sm
 				margin-top: 20px
 	
-	b
+	b,
+	strong
 		font-family: 'MullerBold', Arial, sans-serif
 		color: $color4
+		font-weight: normal
 		
 	a
 		font-family: 'MullerBold', Arial, sans-serif
@@ -291,7 +293,7 @@ h4
 		width: 626px
 		+sm
 			width: 100%
-			max-width: 280px
+			max-width: 100%
 		img
 			width: 100%
 			max-width: 100%
