--- a/src/template/pages/article.pug
+++ b/src/template/pages/article.pug
@@ -53,6 +53,13 @@ block main
 						li <b>@Instasave_bot</b> сохраняет фото с Instagram и видео c <b>YouTube</b>, а <b>@tap2bot</b> и вовсе многофункциональный бот, умеющий и фильм на вечер подобрать и билеты на самолет найти.
 					blockquote Согласно Wikipedia, бот – это специальная программа, выполняющая автоматически и/или по заданному расписанию какие-либо действия через тот же интерфейс, что и обычный пользователь.
 
+				+e.hash
+					a(href='#!') #Новостные агенства
+					a(href='#!') #Боты
+					a(href='#!') #Просто агенства
+					a(href='#!') #Просто агенства
+					a(href='#!') #Просто агенства
+
 				+e.share
 					+e.share-in
 						+e.P.share-text Поделитья статьей
