--- a/src/styles/components/footer.sass
+++ b/src/styles/components/footer.sass
@@ -158,6 +158,8 @@
 				position: absolute
 				top: 5px
 				left: 10px
+				&:not(:first-child)
+					margin-top: 0
 			.icon
 				display: block
 			&-text
