--- a/src/template/pages/home/how.pug
+++ b/src/template/pages/home/how.pug
@@ -48,6 +48,9 @@
 				div(data-bot='rejected')
 					p Это не почта, бро!
 			+e.data-btn
+				div(data-btn='rejected')
+					p(data-btn-event-target='0') Начало
+					p(data-btn-event-target='last') Почту
 				div(data-btn='0')
 					p(data-btn-event-target='1') Лучше не бывает!
 					p(data-btn-event-target='2') Бывало и лучше ...
