--- a/src/styles/partials/_svg.scss
+++ b/src/styles/partials/_svg.scss
@@ -94,6 +94,12 @@
   fill: currentColor;
   stroke: initial;
 }
+.icon-linkedin {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
 .icon-menu-close {
   width: 1em;
   height: 1em;
@@ -134,6 +140,12 @@
   width: 1em;
   height: 1em;
   fill: currentColor;
+  stroke: initial;
+}
+.icon-twitter-pink {
+  width: 1em;
+  height: 1em;
+  fill: #db285e;
   stroke: initial;
 }
 .icon-twitter {
