--- a/src/template/components/footer.pug
+++ b/src/template/components/footer.pug
@@ -128,7 +128,7 @@ if !footerOff
 							p Мы в
 							p социальных сетях:
 						+e.list-soc.__list-text
-							-socList = ['telegram', 'fb', 'insta']
+							-socList = ['fb', 'linkedin', 'twitter-pink']
 							each el in socList
 								+e.list-soc-icon-wrap
 									-socIconClass = '_default __list-soc-icon'
