--- a/src/template/pages/home/how.pug
+++ b/src/template/pages/home/how.pug
@@ -49,7 +49,7 @@
 					p Это не почта, бро!
 			+e.data-btn
 				div(data-btn='rejected')
-					p(data-btn-event-target='0') Начало
+					p Начало
 					p(data-btn-event-target='last') Почту
 				div(data-btn='0')
 					p(data-btn-event-target='1') Лучше не бывает!
