--- a/src/styles/components/footer.sass
+++ b/src/styles/components/footer.sass
@@ -50,12 +50,13 @@
 		top: -1px
 		left: 0
 		right: 0
-		+ratio(1280,77)
+		+ratio(1282,81)
 		position: absolute
 		svg
 			+ratio-in
 			display: block
 			width: 100% !important
+			transform: scaleX(1.01)
 			fill: $color6
 			
 	&__round-sub-top
@@ -69,6 +70,7 @@
 			+ratio-in
 			display: block
 			width: 100% !important
+			transform: scaleX(1.01)
 			fill: $color6
 			
 	&__container
