--- a/src/template/pages/contacts.pug
+++ b/src/template/pages/contacts.pug
@@ -33,7 +33,7 @@ block main
 									p Мы в
 									p социальных сетях:
 								+e.list-soc.__list-text
-									-socList = ['telegram', 'fb', 'insta']
+									-socList = ['fb', 'linkedin', 'twitter-pink']
 									each el in socList
 										+e.list-soc-icon-wrap
 											-socIconClass = '_default __list-soc-icon'
