--- a/src/template/pages/home.pug
+++ b/src/template/pages/home.pug
@@ -27,7 +27,7 @@ block main
 		include home/loc
 		include home/advantage
 		include home/example
-		//include home/top
+		include home/top
 
 block modals
 	+b.modal.modalit#orderBot(aria-hidden='true')
