--- a/src/styles/pages/article.sass
+++ b/src/styles/pages/article.sass
@@ -27,11 +27,7 @@
 			right: -5px
 			+ratio(1280,537)
 			position: absolute
-			svg
-				+ratio-in
-				display: block
-				width: 100% !important
-				fill: $color6
+			background: transparent url('../img/article-bg.svg') center center no-repeat
 		
 	&__container
 		z-index: 1
