--- a/src/styles/pages/home/example.sass
+++ b/src/styles/pages/home/example.sass
@@ -204,9 +204,9 @@
 				pointer-events: none
 				position: absolute
 				top: 0
-				left: 0
+				left: -0.5px
 				z-index: 2
-				width: 100%
+				width: calc(100% + 0.5px)
 				height: 100%
 				fill: $color6
 		&-img
