--- a/src/template/components/footer.pug
+++ b/src/template/components/footer.pug
@@ -23,8 +23,8 @@ if !footerOff
 
 				+e.P.copy Copyright  2018 Unibot. All rights reserved.
 				+e.load
-					+e.load-link(href='#!') Terms
-					+e.load-link(href='#!') Privesy
+					+e.load-link(href='#!') Условия использования
+					+e.load-link(href='#!') Политика конфиденциальности
 
 	else if footerContacts
 		+b.FOOTER.footer_contacts#footer
@@ -89,8 +89,8 @@ if !footerOff
 
 				+e.P.copy Copyright  2018 Unibot. All rights reserved.
 				+e.load
-					+e.load-link(href='#!') Terms
-					+e.load-link(href='#!') Privesy
+					+e.load-link(href='#!') Условия использования
+					+e.load-link(href='#!') Политика конфиденциальности
 
 	else
 		+b.FOOTER.footer#footer(data-scroll-section)
@@ -152,5 +152,5 @@ if !footerOff
 
 				+e.P.copy Copyright  2018 Unibot. All rights reserved.
 				+e.load
-					+e.load-link(href='#!') Terms
-					+e.load-link(href='#!') Privesy
+					+e.load-link(href='#!') Условия использования
+					+e.load-link(href='#!') Политика конфиденциальности
